--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,7 @@
+#===============================================================================
+# CMake settings
+#===============================================================================
+
 cmake_minimum_required(VERSION 3.25 FATAL_ERROR)
 
 project(
@@ -5,6 +9,18 @@ project(
   VERSION 0.1.0
   HOMEPAGE_URL "https://github.com/KyleVaughn/UM2"
   LANGUAGES CXX)
+
+# Disable in-source builds
+if("${CMAKE_SOURCE_DIR}" STREQUAL "${CMAKE_BINARY_DIR}")
+  message(FATAL_ERROR
+    "In-source builds are not allowed."
+    " Create a separate directory for build files and delete CMakeCache.txt.")
+endif()
+
+if (NOT CMAKE_BUILD_TYPE)
+  message(STATUS "No build type selected, defaulting to Release")
+  set(CMAKE_BUILD_TYPE Release CACHE STRING "Choose the type of build" FORCE)
+endif()
 
 # Allow user to specify <project>_ROOT variables
 if (CMAKE_VERSION VERSION_GREATER_EQUAL 3.27)
@@ -16,22 +32,26 @@ endif()
 # Set module path
 set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake/Modules)
 
-set(CMAKE_EXPORT_COMPILE_COMMANDS ON) # For IDE users
+# For IDE users
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 #===============================================================================
 # User options
 #===============================================================================
 
+# Use external dependencies
 option(UM2_USE_TBB          "Enable Intel TBB"                  ON)
 option(UM2_USE_OPENMP       "Enable OpenMP"                     ON)
 option(UM2_USE_GMSH         "Enable Gmsh"                       ON)
 option(UM2_USE_PNG          "Enable PNG"                        OFF)
 option(UM2_USE_CUDA         "Enable CUDA"                       OFF)
 
+# Enable/disable features
 option(UM2_ENABLE_INT64     "Enable 64-bit integers"            OFF) # For large meshes
 option(UM2_ENABLE_FLOAT64   "Enable 64-bit floating point"      ON)
 option(UM2_ENABLE_FASTMATH  "Enable fast math"                  ON) # CPU and GPU
 
+# Build options
 option(UM2_BUILD_TESTS      "Build tests"                       ON)
 option(UM2_BUILD_TUTORIAL   "Build tutorial"                    OFF)
 option(UM2_BUILD_EXAMPLES   "Build examples"                    OFF)
@@ -47,20 +67,20 @@ option(UM2_USE_CLANG_TIDY    "Enable clang-tidy"               ${UM2_DEV_MODE})
 option(UM2_USE_CPPCHECK      "Enable cppcheck"                 ${UM2_DEV_MODE})
 option(UM2_USE_COVERAGE      "Enable coverage"                 OFF)
 
-#===============================================================================
-# Set a default build configuration if not explicitly specified
-#===============================================================================
 
-if (NOT CMAKE_BUILD_TYPE)
-  message(STATUS "No build type selected, defaulting to RelWithDebInfo")
-  set(CMAKE_BUILD_TYPE RelWithDebInfo CACHE STRING "Choose the type of build" FORCE)
+# If CMAKE_BUILD_TYPE is Debug, then turn on DBC by default
+if (CMAKE_BUILD_TYPE STREQUAL "Debug")
+  set(IS_DEBUG_BUILD ON)
+else()
+  set(IS_DEBUG_BUILD OFF)
 endif()
+option(UM2_ENABLE_DBC        "Enable DBC"                     ${IS_DEBUG_BUILD}) 
 
 #===============================================================================
 # Set minimum logging level
 #===============================================================================
 
-# minimum log level for compile-time filtering of log messages
+# Minimum log level for compile-time filtering of log messages
 # Off = 0,        // no messages
 # Error = 1,      // only errors
 # Warn = 2,       // errors and warnings
@@ -77,8 +97,10 @@ endif()
 # Check compiler version
 #===============================================================================
 
-set(UM2_MIN_GCC_VERSION 12.0)
-set(UM2_MIN_CLANG_VERSION 15.0)
+# Minimum version for GCC and Clang
+# This is to ensure that the compiler supports the parts of C++20 that we use
+set(UM2_MIN_GCC_VERSION 10.0)
+set(UM2_MIN_CLANG_VERSION 10.0)
 if (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
   if (CMAKE_CXX_COMPILER_VERSION VERSION_LESS ${UM2_MIN_GCC_VERSION})
     message(FATAL_ERROR "GCC version must be at least ${UM2_MIN_GCC_VERSION}")
@@ -90,7 +112,7 @@ elseif (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
 else()
   message(WARNING
           "You are using an unsupported compiler! "
-          "Please use GCC >= 12.0 or Clang >= 15.0")
+          "Please use GCC >= ${UM2_MIN_GCC_VERSION} or Clang >= ${UM2_MIN_CLANG_VERSION}")
 endif()
 
 #===============================================================================
@@ -104,19 +126,9 @@ include(GNUInstallDirs)
 # whether the executable is the original one from the build directory or the
 # installed one in CMAKE_INSTALL_PREFIX. Ref:
 # https://gitlab.kitware.com/cmake/community/wikis/doc/cmake/RPATH-handling
-
-# use, i.e. don't skip the full RPATH for the build tree
-set(CMAKE_SKIP_BUILD_RPATH  FALSE)
-
-# when building, don't use the install RPATH already
-# (but later on when installing)
+set(CMAKE_SKIP_BUILD_RPATH FALSE)
 set(CMAKE_BUILD_WITH_INSTALL_RPATH FALSE)
-
-# add the automatically determined parts of the RPATH
-# which point to directories outside the build tree to the install RPATH
 set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
-
-# the RPATH to be used when installing, but only if it's not a system directory
 list(FIND CMAKE_PLATFORM_IMPLICIT_LINK_DIRECTORIES "${CMAKE_INSTALL_FULL_LIBDIR}" isSystemDir)
 if("${isSystemDir}" STREQUAL "-1")
   set(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_FULL_LIBDIR}")
@@ -128,10 +140,11 @@ endif()
 
 # Sources
 set(UM2_SOURCES
+    "src/dummy.cpp"
     # common
-    "src/common/Log.cpp"
+    #"src/common/Log.cpp"
     # mpact
-    "src/mpact/SpatialPartition.cpp"
+    #"src/mpact/SpatialPartition.cpp"
     #    "src/mpact/io.cpp"
     #    # gmsh
     #    "src/gmsh/base_gmsh_api.cpp"
@@ -146,7 +159,7 @@ set(UM2_SOURCES
   )
 
 add_library(um2 SHARED ${UM2_SOURCES})
-add_library(UM2::um2 ALIAS um2)
+#add_library(UM2::um2 ALIAS um2)
 
 target_include_directories(um2
   PUBLIC
@@ -159,23 +172,23 @@ set_target_properties(um2 PROPERTIES CXX_STANDARD ${UM2_CXX_STANDARD})
 
 # config.hpp
 configure_file(
-        "${PROJECT_SOURCE_DIR}/cmake/config.hpp.in"
-        "${PROJECT_SOURCE_DIR}/include/um2/config.hpp")
+  "${PROJECT_SOURCE_DIR}/cmake/config.hpp.in"
+  "${PROJECT_SOURCE_DIR}/include/um2/config.hpp")
 
-#===============================================================================
-# Mandatory dependencies
-#===============================================================================
-
-# HDF5
-find_package(HDF5 REQUIRED COMPONENTS CXX)
-target_link_libraries(um2 PUBLIC "${HDF5_CXX_LIBRARIES}")
-target_include_directories(um2 SYSTEM PUBLIC "${HDF5_INCLUDE_DIRS}")
-
-# pugixml
-find_package(PugiXML REQUIRED)
-target_link_libraries(um2 PUBLIC "${PUGIXML_LIB}")
-target_include_directories(um2 SYSTEM PUBLIC "${PUGIXML_INC}")
-
+##===============================================================================
+## Mandatory dependencies
+##===============================================================================
+#
+## HDF5
+#find_package(HDF5 REQUIRED COMPONENTS CXX)
+#target_link_libraries(um2 PUBLIC "${HDF5_CXX_LIBRARIES}")
+#target_include_directories(um2 SYSTEM PUBLIC "${HDF5_INCLUDE_DIRS}")
+#
+## pugixml
+#find_package(PugiXML REQUIRED)
+#target_link_libraries(um2 PUBLIC "${PUGIXML_LIB}")
+#target_include_directories(um2 SYSTEM PUBLIC "${PUGIXML_INC}")
+#
 #===============================================================================
 # Optional dependencies
 #===============================================================================
@@ -193,7 +206,6 @@ if (UM2_USE_TBB)
   # Tell the user where TBB was found
   message(STATUS "Found TBB: ${TBB_DIR}")
   target_link_libraries(um2 PUBLIC TBB::tbb)
-  #  target_include_directories(um2 SYSTEM PUBLIC "${TBB_INC}")
 endif()
 
 # Gmsh
@@ -321,7 +333,7 @@ if (UM2_USE_CPPCHECK)
   string(CONCAT CPPCHECK_ARGS
           ${CMAKE_CXX_CPPCHECK}
           ";--enable=all"
-          ";--std=c++20"
+          ";--std=c++${UM2_CXX_STANDARD}"
           ";--language=c++"
           ";--suppressions-list=${CMAKE_CURRENT_BINARY_DIR}/cppcheck-suppressions"
           ";--inconclusive"
@@ -349,29 +361,29 @@ if (UM2_BUILD_TESTS)
   add_subdirectory(tests)
 endif()
 
-# Tutorial
-if (UM2_BUILD_TUTORIAL)
-  add_subdirectory(tutorial)
-endif()
-
-# Examples
-if (UM2_BUILD_EXAMPLES)
-  add_subdirectory(examples)
-endif()
-
-# Benchmarks
-if (UM2_BUILD_BENCHMARKS)
-  add_subdirectory(benchmarks)
-endif()
-
-#===============================================================================
-# Install
-#===============================================================================
-
-# Install the library
-install(TARGETS um2
-        EXPORT um2-targets
-        RUNTIME DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/bin
-        LIBRARY DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/lib
-        ARCHIVE DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/lib)
-install(DIRECTORY include/ DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/include)
+### Tutorial
+##if (UM2_BUILD_TUTORIAL)
+##  add_subdirectory(tutorial)
+##endif()
+##
+### Examples
+##if (UM2_BUILD_EXAMPLES)
+##  add_subdirectory(examples)
+##endif()
+##
+### Benchmarks
+##if (UM2_BUILD_BENCHMARKS)
+##  add_subdirectory(benchmarks)
+##endif()
+#
+##===============================================================================
+## Install
+##===============================================================================
+#
+## Install the library
+#install(TARGETS um2
+#        EXPORT um2-targets
+#        RUNTIME DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/bin
+#        LIBRARY DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/lib
+#        ARCHIVE DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/lib)
+#install(DIRECTORY include/ DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/include)
