--- a/benchmarks/CMakeLists.txt
+++ b/benchmarks/CMakeLists.txt
@@ -1,19 +1,7 @@
 include(${PROJECT_SOURCE_DIR}/cmake/add_um2_benchmark.cmake)
 
 add_subdirectory(./stdlib)
-
-#===============================================================================
-# stdlib 
-#===============================================================================
-
-#add_um2_benchmark(./stdlib/exp.cpp)
-#add_um2_benchmark(./stdlib/sqrt.cpp)
-#add_um2_benchmark(./stdlib/sort.cpp)
-#
-##===============================================================================
-## math 
-##===============================================================================
-#
+add_subdirectory(./geometry)
 #add_um2_benchmark(./math/Vec2.cpp)
 #
 ##===============================================================================
