--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -4,35 +4,8 @@ add_subdirectory(./stdlib)
 add_subdirectory(./common)
 add_subdirectory(./math)
 add_subdirectory(./geometry)
-
-##==============================================================================
-## mesh
-##==============================================================================
-#
-## Copy the mesh files to the built test directory
-#file(COPY ${PROJECT_SOURCE_DIR}/tests/mesh/mesh_files DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
-#
-#add_um2_test(./mesh/RegularGrid.cpp)
-#add_um2_test(./mesh/RegularPartition.cpp)
-#add_um2_test(./mesh/RectilinearGrid.cpp)
-#add_um2_test(./mesh/RectilinearPartition.cpp)
-#add_um2_test(./mesh/PolytopeSoup.cpp)
-#add_um2_test(./mesh/TriMesh.cpp)
-#add_um2_test(./mesh/QuadMesh.cpp)
-#add_um2_test(./mesh/QuadraticTriMesh.cpp)
-#add_um2_test(./mesh/QuadraticQuadMesh.cpp)
-#add_um2_test(./mesh/io_abaqus.cpp)
-#add_um2_test(./mesh/io_xdmf.cpp)
-#
-##==============================================================================
-## mpact
-##==============================================================================
-#
-## Copy the mesh files to the built test directory
-#file(COPY ${PROJECT_SOURCE_DIR}/tests/mpact/mpact_mesh_files DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
-#
-#add_um2_test(./mpact/SpatialPartition.cpp)
-#
+add_subdirectory(./mesh)
+add_subdirectory(./mpact)
 ####==============================================================================
 #### ray_casting
 ####==============================================================================
