--- a/tests/mesh/CMakeLists.txt
+++ b/tests/mesh/CMakeLists.txt
@@ -5,7 +5,7 @@ add_um2_test(./regular_grid.cpp)
 add_um2_test(./regular_partition.cpp)
 add_um2_test(./rectilinear_grid.cpp)
 add_um2_test(./rectilinear_partition.cpp)
-#add_um2_test(./polytope_soup.cpp)
+add_um2_test(./polytope_soup.cpp)
 add_um2_test(./io_abaqus.cpp)
 add_um2_test(./io_xdmf.cpp)
 #add_um2_test(./tri_mesh.cpp)
