--- a/tests/mesh/CMakeLists.txt
+++ b/tests/mesh/CMakeLists.txt
@@ -8,7 +8,7 @@ add_um2_test(./rectilinear_partition.cpp)
 add_um2_test(./polytope_soup.cpp)
 add_um2_test(./io_abaqus.cpp)
 add_um2_test(./io_xdmf.cpp)
-#add_um2_test(./tri_mesh.cpp)
+add_um2_test(./tri_mesh.cpp)
 #add_um2_test(./quad_mesh.cpp)
 #add_um2_test(./quadratic_tri_mesh.cpp)
 #add_um2_test(./quadratic_quad_mesh.cpp)
