--- a/tutorial/CMakeLists.txt
+++ b/tutorial/CMakeLists.txt
@@ -10,6 +10,7 @@ include(${PROJECT_SOURCE_DIR}/cmake/add_um2_tutorial.cmake)
 #add_um2_tutorial(./2d/2a_nogap_mesh.cpp)
 #add_um2_tutorial(./2d/2a.cpp)
 add_um2_tutorial(./2d/c5g7_2d.cpp)
+add_um2_tutorial(./2d/c5g7_2d_smoc.cpp)
 #add_um2_tutorial(./2d/crocus_2d.cpp)
 #
 ##==============================================================================
