--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -142,13 +142,13 @@ endif()
 # Sources
 set(UM2_SOURCES
     "src/common/log.cpp"
-    "src/gmsh/base_gmsh_api.cpp"
-    "src/gmsh/io.cpp"
-    "src/gmsh/model.cpp"
-    "src/gmsh/mesh.cpp"
+    # "src/gmsh/base_gmsh_api.cpp"
+    # "src/gmsh/io.cpp"
+    # "src/gmsh/model.cpp"
+    # "src/gmsh/mesh.cpp"
     #    # visualization
     #    "src/visualization/Image2D.cpp"
-    "src/um2.cpp"
+    # "src/um2.cpp"
     #    "src/um2c.cpp"
   )
 
